--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "enhanced-resolve": "^5.10.0",
+    "i18next": "^21.8.13",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-undraw-illustrations": "^2.0.3",
